--- a/app/style.css
+++ b/app/style.css
@@ -8,6 +8,20 @@ ul {
     list-style: upper-alpha;
 }
 
+button {
+    background-color: rgb(0, 180, 250);
+    color: rgb(248, 248, 248);
+    font-family: monospace;
+    border: 3px solid rgb(248, 248, 248);
+    border-radius: 8px;
+    margin: 0.1em 0.2em 0.1em 0.2em;
+}
+
+input {
+    border: 3px solid rgb(248, 248, 248);
+    font-family: monospace;
+}
+
 h1#title {
     display: none;
 }
