--- a/app/style.css
+++ b/app/style.css
@@ -8,6 +8,10 @@ ul {
     list-style: upper-alpha;
 }
 
+li {
+    cursor: default;
+}
+
 button {
     background-color: rgb(0, 180, 250);
     color: rgb(248, 248, 248);
