--- a/app/style.css
+++ b/app/style.css
@@ -12,6 +12,10 @@ li {
     cursor: default;
 }
 
+li:hover {
+    text-decoration: underline;
+}
+
 button {
     background-color: rgb(0, 180, 250);
     color: rgb(248, 248, 248);
